# ros_ws

./: .gitignore  launch_ros.service  readme.md
scripts/: autostart.sh  launch_ros.service
src/camera_utils/: CMakeLists.txt  package.xml
src/camera_utils/camera_utils/: status_node.py
src/camera_utils/include/camera_utils/: cpp_splitter.hpp
src/camera_utils/launch/: stereo_camera.launch.py  stereo_proc.launch.py
src/camera_utils/src/: cpp_splitter.cpp
src/dualsense_utils/: package.xml  setup.cfg  setup.py
src/dualsense_utils/dualsense_utils/: handler_node.py
src/dualsense_utils/launch/: dualsense.launch.py
src/fake_imu/: package.xml  setup.cfg  setup.py
src/fake_imu/fake_imu/: fake_imu_node.py
src/localization_manager/: package.xml  setup.py
src/localization_manager/localization_manager/: localization_manager.py
src/robo_bringup/: CMakeLists.txt  package.xml
src/robo_bringup/config/calibration/04.06.2026_1280X480/: left.yaml  right.yaml
src/robo_bringup/config/calibration/some_calibr/: left.yaml  right.yaml
src/robo_bringup/config/ekf/: ekf.yaml
src/robo_bringup/config/nav2/: nav2_params.yaml
src/robo_bringup/launch/: joy.launch.py  micro_ros_agent_docker.launch.py  robo.launch.py  slam.launch.py
src/robo_bringup/scripts/: a.py  global_localizator.py  ground_fixer.py  vslam_fixer.py
src/rtsp_streamer/: package.xml  setup.py
src/rtsp_streamer/launch/: stream.launch.py
src/rtsp_streamer/rtsp_streamer/: rtsp_node.py
src/transhorms_urdf/: package.xml  setup.cfg  setup.py
src/transhorms_urdf/launch/: transforms.launch.py
src/transhorms_urdf/urdf/: robo.urdf
src/walle_camera/: CMakeLists.txt  package.xml
src/walle_camera/calibration/: left.yaml  right.yaml
src/walle_camera/config/: elp_stereo_camera_params.yaml
src/walle_camera/include/stereo_image_splitter/: splitter_node.hpp
src/walle_camera/launch/: camera.launch.py
src/walle_camera/src/: main.cpp  splitter_node.cpp
www/: index.html  joystick.html  mjpeg_proxy.py
